fix pom logic and Base test